--- a/packages/server/src/styles/globals.css
+++ b/packages/server/src/styles/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?&family=Manrope:wght@200..800&&&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 @import "tailwindcss";
 
@@ -108,6 +109,7 @@
 @theme inline {
   --font-manrope: "Manrope", sans-serif;
   --font-open-sans: "Open Sans", sans-serif;
+  --font-playfair-display: "Playfair Display", serif;
   --color-grey-50: var(--grey-50);
   --color-grey-100: var(--grey-100);
   --color-grey-200: var(--grey-200);
@@ -180,14 +182,14 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 font-manrope;
     scrollbar-width: thin;
   }
   body {
-    @apply text-sm antialiased bg-background text-foreground font-open-sans;
+    @apply bg-background text-foreground;
   }
   h1, h2, h3 {
-    @apply font-semibold font-manrope;
+    @apply font-semibold;
   }
   button {
     @apply cursor-pointer;
